# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/communication/netstack/netstack_config.gni")

ohos_rust_shared_library("http_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  sources = [ "src/lib.rs" ]
  
  external_deps = [
    "hilog:hilog_rust",
    "runtime_core:ani",
    "netmanager_base:ani_rs",
  ]

  deps = [
    "../common:netstack_common",
    "//third_party/rust/crates/serde/serde:lib",
    "$NETSTACK_INNERKITS_DIR/rust/netstack_rs:netstack_rs",
  ]

  clippy_lints = "none"

  part_name = "netstack"
  subsystem_name = "communication"
  output_extension = "so"
}

generate_static_abc("http") {
  base_url = "./ets"
  files = [ "ets/@ohos.net.http.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/http.abc"
}

ohos_prebuilt_etc("http_etc") {
  source = "$target_out_dir/http.abc"
  module_install_dir = "framework"
  part_name = "netstack"
  subsystem_name = "communication"
  deps = [ ":http" ]
}
