# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "net_ssl"
version = "0.1.0"
edition = "2021"

[dependencies]
ani_rs = { path = "../../../../../netmanager_base/common/ani_rs" }
cxx = "1.0.97"
serde = { version = "1.0", features = ["derive"] }
hilog_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hilog" }
netstack_common = { path = "../common" }
